--- a/BattleTank/.gitignore
+++ b/BattleTank/.gitignore
@@ -74,5 +74,5 @@ Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
-#Ignoring /Content folder
-Content/*
+#Ignoring StarterContent folder
+Content/StarterContent/*
