--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
+EditorStartupMap=/Game/Level/BattleGround.BattleGround
+GameDefaultMap=/Game/Level/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
@@ -49,5 +49,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
